v2.02 xx-Jun-07
Fixed bug in selecting transport to use if the server didn't support TCP.

v2.01 17-Jun-07
Fixed bug that resulted in no iconbar icon if all saved mounts were unavailable when the frontend was loaded.
Prevent creating a mount icon on the iconbar if mounting from the export browser window failed.

v2.00 3-Jun-07
Completely new frontend that allows browsing of available servers and exports.
Added full filing system support.
Fixed finding of mountd and nfsd port numbers from portmapper when NFS2 not
supported.
Fixed encoding that sometimes added garbage to the end of filenames.
Added TranslateWin option to translate characters that are illegal in Windows filenames.

v1.10 28-Mar-07
Fixed timestamp setting for OS_File 0 if the file already existed.
Fixed inaccuracy in calculation of nanosecond part of the timestamp.
The timestamp is now set when an open file is closed.
Now refetches the root filehandle if it is stale.
When reconnecting after a timeout, use a different socket to avoid delays.

v1.09 16-Oct-06
Fixed bug that caused the wrong attributes to be returned for a symlink that
couldn't be followed.
File sizes are limited to 2GB rather than 4GB as accessing > 2GB doesn't work.
Added UnixEx option to set filetype based on executable permissions.
Added filename encoding option.
Improved NFS3 writes for servers that support unstable storage.
Added support for accessing files from callbacks.

v1.08 26-Oct-05
Fixed bug where sometimes filetypes would get changed when a file was renamed.

v1.07 14-Jun-05
Fixed problem with renamed directories getting ,ffd appended.

v1.06 29-May-05
Added support for NFS v3.
Directories now always get a filetype of ffd.
Fixed bug that truncated filenames with escape sequences when renaming them.
Fixed problem that could give a permissions error when creating a file.

v1.05 9-Apr-05
Fixed bug in renaming files that was caused by the changes in 1.04.

v1.04 2-Apr-05